--- a/ice-repo/lists/quotes.more-options.yml
+++ b/ice-repo/lists/quotes.more-options.yml
@@ -3,9 +3,11 @@ list:
     - value: application.cancel
       label_en: Remove
       label_de: Remove
+      label_nl: Verwijder
     - value: quote.cancel
       label_en: Remove
       label_de: Remove
+      label_nl: Verwijder
   type: text
   additionals:
     label_en:
@@ -13,4 +15,7 @@ list:
       type: text
     label_de:
       label: label_de
+      type: string
+    label_nl:
+      label: label_nl
       type: string
