--- a/ice-repo/lists/insis.policy.contract.question.clm-4.yml
+++ b/ice-repo/lists/insis.policy.contract.question.clm-4.yml
@@ -10,7 +10,7 @@ list:
   items:
     - value: '1'
       label_en: 'Yes'
-      label_nl: 'Ja'
+      label_nl: 'JA'
     - value: '2'
       label_en: 'Yes'
-      label_nl: 'Yes'
+      label_nl: 'JA'
