Fix bugs in event types get integration

--- a/ice-repo/definitions/insis/definitions/claim/definitions/fnol/integrations/event-types.get.yml
+++ b/ice-repo/definitions/insis/definitions/claim/definitions/fnol/integrations/event-types.get.yml
@@ -22,6 +22,9 @@ integration:
 
             - param: p_fulltext
               value: ''
+
+            - param: insr_type
+              value: ''
       in:
         - fromIdx:
             array: payload.rows
