Show family picture for degause product

--- a/ice-repo/definitions/insis/definitions/dashboard/definitions/policies/definitions/customer/dts/policies.select-picture.yml
+++ b/ice-repo/definitions/insis/definitions/dashboard/definitions/policies/definitions/customer/dts/policies.select-picture.yml
@@ -23,3 +23,7 @@ dt:
         - '910211'
       outputs:
         - /assets/icons/family.svg
+    - inputs:
+        - '9112'
+      outputs:
+        - /assets/icons/family.svg
