--- a/ice-repo/lists/clients.types-text.yml
+++ b/ice-repo/lists/clients.types-text.yml
@@ -1,14 +1,14 @@
 list:
   items:
-    - value: '1'
+    - value: 1
       label_en: Person
       label_de: Person
       label_nl: Persoon
-    - value: '2'
+    - value: 2
       label_en: Company
       label_de: Firma
       label_nl: Bedrijf
-  type: text
+  type: integer
   additionals:
     label_en:
       label: label_en
