Show decrease parameters in policy details

--- a/ice-repo/definitions/insis/definitions/dashboard/definitions/policies/definitions/agent/definition.yml
+++ b/ice-repo/definitions/insis/definitions/dashboard/definitions/policies/definitions/agent/definition.yml
@@ -1,6 +1,6 @@
 definition:
   title: insis.dashboard.policies.agent
   executable: true
-  showInsights: false
+  showInsights: true
   elementOnPageCheck: false
   defaultGrowlDuration: 10000
