--- a/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl2121/definitions/term-life/definitions/quote-buy/definitions/customer/sections/calculate-and-recalculate.yml
+++ b/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl2121/definitions/term-life/definitions/quote-buy/definitions/customer/sections/calculate-and-recalculate.yml
@@ -1,19 +1,19 @@
 section:
   component:
     IceFlexSection:
+      tags:
+        - pull-right
       grid:
         rows:
           - cols:
-              - size: ''
-                size.xs: auto
-                css: ''
+              - size: 100%
                 elements:
-                  - name: go-to-next-page
+                  - name: go-to-next-page-covers
+          - cols:
               - size: auto
                 size.xs: auto
                 size.sm: auto
                 elements:
                   - name: reject
-                css: negative-ml
-            css: u-mt-4
-            gap: ''
+            css: u-mt-2
+      css: button-width-100 u-mb-3
