--- a/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl2121/definitions/term-life/elements/policy.insured.person-objects.yml
+++ b/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl2121/definitions/term-life/elements/policy.insured.person-objects.yml
@@ -22,6 +22,8 @@ element:
           cardLayout: always
           confirmOnRemove: false
           showRemoveButton: false
+          showAddButton: false
       elseComponent:
         InsisArrayCardsLayout:
-          showRemoveButton: null
+          showRemoveButton: false
+          showAddButton: false
