adding new questions and custom attr fields

--- a/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl2121/definitions/term-life/definitions/quote-buy/sections/insured.questions-and-documents.yml
+++ b/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl2121/definitions/term-life/definitions/quote-buy/sections/insured.questions-and-documents.yml
@@ -25,11 +25,29 @@ section:
           - gap: 24px
             gap.xs: 0px
             cols:
-              - size: 56.5%
+              - size: 100%
                 size.xs: 100%
                 css: u-mb-4
                 elements:
                   - name: policy.insured.person-objects~question.q-25
+              - size: 100%
+                size.xs: 100%
+                css: u-mb-4
+                elements:
+                  - name: policy.insured.person-objects~question.q-25-01
+          - gap: 24px
+            gap.xs: 0px
+            cols:
+              - size: 100%
+                size.xs: 100%
+                css: u-mb-4
+                elements:
+                  - name: policy.insured.person-objects~question.q-25-02
+              - size: 100%
+                size.xs: 100%
+                css: u-mb-4
+                elements:
+                  - name: policy.insured.person-objects~question.q-25-03
           - gap: 24px
             gap.xs: 0px
             align: start
