adding new field

--- a/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl2121/definitions/term-life/definitions/quote-buy/sections/policy.details.yml
+++ b/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl2121/definitions/term-life/definitions/quote-buy/sections/policy.details.yml
@@ -44,6 +44,8 @@ section:
               - size: 175px
                 size.xs: 100%
                 css: u-mb-4
+                elements:
+                  - name: policy.contract.custom.decrease-type
               - size: 175px
                 size.xs: 100%
                 css: u-mb-4
