Add quote integration

--- a/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl2121/definitions/term-life/definitions/quote-buy/definitions/agent/actions/save-and-send-to-customer.yml
+++ b/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl2121/definitions/term-life/definitions/quote-buy/definitions/agent/actions/save-and-send-to-customer.yml
@@ -1,7 +1,7 @@
 action:
   execution:
     - IntegrationExecutionRule:
-        integration: application.register
+        integration: quotation.register
     - NavigateToDefinitionExecutionRule:
         definition: insis.person.client.agent
         page: summary
