Make contract begin date to equal to insis open date

--- a/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl2121/definitions/term-life/definitions/quote-buy/definitions/agent/elements/policy.contract.begin.yml
+++ b/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl2121/definitions/term-life/definitions/quote-buy/definitions/agent/elements/policy.contract.begin.yml
@@ -1,5 +1,8 @@
 element:
   type: date
+  defaultValue:
+    DateExpressionValueRule:
+      expression: insis.openday
   mirror:
     CopyValueMirrorRule:
       originElement: insis.openday
