Navigate back to policies when clients rejects the offer

--- a/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl2121/definitions/term-life/definitions/quote-buy/definitions/customer/elements/reject.yml
+++ b/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl2121/definitions/term-life/definitions/quote-buy/definitions/customer/elements/reject.yml
@@ -6,3 +6,6 @@ element:
         IceButton:
           themeColor: accent
           variant: stroked
+  defaultValue:
+    StaticValueRule:
+      value: navigate.back
