--- a/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl2121/definitions/term-life/elements/policy.contract.custom.decrease-mode.yml
+++ b/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl2121/definitions/term-life/elements/policy.contract.custom.decrease-mode.yml
@@ -2,4 +2,8 @@ element:
   type: text
   viewMode: required
   component: IceDropdown
+  defaultValue: M
   values: policy.contract.custom.decrease-mode
+  buckets:
+    insis-quote:
+      trigger: true
