--- a/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl2121/definitions/term-life/definitions/quote-buy/definitions/customer/elements/policy.contract.custom.decrease-type.yml
+++ b/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl2121/definitions/term-life/definitions/quote-buy/definitions/customer/elements/policy.contract.custom.decrease-type.yml
@@ -1,2 +1,8 @@
 element:
   type: integer
+  viewMode:
+    ConditionalViewModeRule:
+      conditionElement: policy.contract.policy-id
+      conditionViewMode: required
+      elseViewMode: disabled
+      conditionValue: null
