--- a/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl2121/definitions/term-life/definitions/quote-buy/definitions/customer/elements/policy.contract.payment.term.duration.yml
+++ b/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl2121/definitions/term-life/definitions/quote-buy/definitions/customer/elements/policy.contract.payment.term.duration.yml
@@ -1,5 +1,11 @@
 element:
   type: integer
   viewMode:
-    StaticViewModeRule:
-      viewMode: disabled
+    ConditionalViewModeRule:
+      conditionElement: policy.contract.policy-id
+      conditionViewMode: required
+      elseViewMode: disabled
+      conditionValue: null
+  buckets:
+    insis-quote:
+      trigger: true
