--- a/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl2121/definitions/term-life/elements/policy.insured.person-objects~person.age-at-begin.yml
+++ b/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl2121/definitions/term-life/elements/policy.insured.person-objects~person.age-at-begin.yml
@@ -7,8 +7,8 @@ element:
       ageCalculationMethod: month
   range:
     StaticRangeRule:
-      min: '18'
-      max: '65'
+      min: 25
+      max: 50
   viewMode: required
   component:
     StaticComponentRule:
