--- a/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl2121/definitions/term-life/definitions/quote-buy/integrations/fast-calculation.yml
+++ b/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl2121/definitions/term-life/definitions/quote-buy/integrations/fast-calculation.yml
@@ -7,6 +7,7 @@ integration:
   transformation:
     DefaultTransformationRule:
       dateFormat: DD-MM-YYYY
+      additional: insis
       out:
         - mappings:
             - payload: params.BEGIN
