--- a/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl2121/definitions/term-life/definitions/quote-buy/definitions/customer/elements/go-to-next-page-covers.yml
+++ b/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl2121/definitions/term-life/definitions/quote-buy/definitions/customer/elements/go-to-next-page-covers.yml
@@ -3,3 +3,6 @@ element:
   label:
     ResourceLabelRule:
       key: elements.go-to-next-page-covers.2121.label
+  defaultValue:
+    StaticValueRule:
+      value: accept-offer
