Go to the questionnare after accepting the quote

--- a/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl2121/definitions/term-life/definitions/quote-buy/definitions/customer/actions/accept-offer.yml
+++ b/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl2121/definitions/term-life/definitions/quote-buy/definitions/customer/actions/accept-offer.yml
@@ -3,4 +3,4 @@ action:
     - IntegrationExecutionRule:
         integration: application.register
     - NavigateToPageExecutionRule:
-        page: 2.application.beneficiaries
+        page: 2.application.details
